tests/uncompilable_examples/enum_with_tuple_field.stderr
error: proc-macro derive panicked
 --> $DIR/enum_with_tuple_field.rs:3:10
  |
3 | #[derive(VariantAccess)]
  |          ^^^^^^^^^^^^^
  |
  = help: message: Can only derive for enums whose types do not contain multiple fields.
